Updated the bootstrap files from the offline files stored in a folder to the CDN links

--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Contact - ennovate lab</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/icon type" href="Images/globe.png">
 	<link href="https://fonts.googleapis.com/css?family=Muli|Poppins&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="bootstrapFiles/css/bootstrap.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="project.css">
 </head>
+
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark px-md-5 fixed-top">
 		<a class="navbar-brand text-primary" href="index.html" target="_blank"><img src="Images/globe.png"></a>
@@ -18,14 +21,18 @@
 
 		<div class="collapse navbar-collapse justify-content-end mb-2" id="nav">
 			<ul class="navbar-nav font-muli font-big">
-				<li class="nav-item"><a class="nav-link text-light text-center px-4 px-md-4" href="index.html"target="_blank">Home</a></li>
-				<li class="nav-item"><a class="nav-link text-light text-center px-4 px-md-4" href="about.html"target="_blank">About us</a></li>
-				<li class="nav-item"><a class="nav-link text-light text-center px-4 px-md-4 active" href="contact.html"target="_blank">Contact</a></li>
-				<li class="nav-item"><a class="nav-link text-light text-center px-4 px-md-4" href="lic.html" target="_blank">LIC</a></li>
+				<li class="nav-item"><a class="nav-link text-light text-center px-4 px-md-4" href="index.html"
+						target="_blank">Home</a></li>
+				<li class="nav-item"><a class="nav-link text-light text-center px-4 px-md-4" href="about.html"
+						target="_blank">About us</a></li>
+				<li class="nav-item"><a class="nav-link text-light text-center px-4 px-md-4 active" href="contact.html"
+						target="_blank">Contact</a></li>
+				<li class="nav-item"><a class="nav-link text-light text-center px-4 px-md-4" href="lic.html"
+						target="_blank">LIC</a></li>
 			</ul>
 		</div>
 	</nav>
-	
+
 	<div class="container-fluid cntBanner px-0">
 		<div class="cnt-overlay w-100 h-100 d-flex align-items-center justify-content-center">
 			<h1 class="text-light font-weight-bold txt-shadow">Contact Us</h1>
@@ -36,7 +43,8 @@
 		<div class="row">
 			<div class="col-md-6 font-muli">
 				<h1 class="font-poppins text-center text-md-left">Contact Details</h1>
-				<p class="text-muted lead my-2 my-md-4">Have a project you'd like to discuss with us? Feel free to contact us via any of the following means.</p>
+				<p class="text-muted lead my-2 my-md-4">Have a project you'd like to discuss with us? Feel free to
+					contact us via any of the following means.</p>
 				<div class="my-5">
 					<h5>Location</h5>
 					<p class="text-muted lead">50, Ogbomoso-Ilorin Rd, Ogbomoso, Oyo State.</p>
@@ -91,19 +99,28 @@
 				<h4 class="font-weight-bold">Contact us</h4>
 				<p class="text-muted">Email: <span class="text-muted">hello@ennovatelab.com</span></p>
 				<p class="text-lightgray">Phone: <span class="text-muted">+2348051762471</span></p>
-				<p class="text-lightgray">Address: <span class="text-muted">50, Ogbomoso-Ilorin Rd, Ogbomosho, Oyo State.</span></p>
+				<p class="text-lightgray">Address: <span class="text-muted">50, Ogbomoso-Ilorin Rd, Ogbomosho, Oyo
+						State.</span></p>
 			</div>
 		</div>
 	</div>
 
 
-	<p class="bg-dark text-light text-center mb-0 p-3 mt-5 font-muli">Designed by <span class="text-warning">Joshua Oyeleke</span> || 2348163087542</p>
+	<p class="bg-dark text-light text-center mb-0 p-3 mt-5 font-muli">Designed by <span class="text-warning">Joshua
+			Oyeleke</span> || 2348163087542</p>
 
 
 	<script src="lic-script.js"></script>
-	<script src="./bootstrapFiles/jquery.js"></script>
-	<script src="./bootstrapFiles/popper.min.js"></script>
-	<script src="./bootstrapFiles/js/bootstrap.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+		crossorigin="anonymous"></script>
 
 </body>
+
 </html>
