--- a/lic.html
+++ b/lic.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>LIC - 2018</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="images/icon type" href="Images/side.png">
 	<link href="https://fonts.googleapis.com/css?family=Muli|Poppins&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="bootstrapFiles/css/bootstrap.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="project.css">
 </head>
+
 <body>
 	<div class="bg-img">
 		<!-- navbar -->
@@ -19,18 +22,22 @@
 			</button>
 			<div class="collapse navbar-collapse justify-content-end align-items-center" id="navCollapse">
 				<ul class="navbar-nav lic-nav font-muli">
-					<li class="nav-item"><a class="nav-link text-center text-light px-4 active" href="lic.html">HOME</a></li>
+					<li class="nav-item"><a class="nav-link text-center text-light px-4 active" href="lic.html">HOME</a>
+					</li>
 					<li class="nav-item"><a class="nav-link text-center text-light px-4" href="#about">ABOUT</a></li>
-					<li class="nav-item"><a class="nav-link text-center text-light px-4" href="index.html" target="_blank">E-LAB</a></li>
-					<li class="nav-item"><a class="nav-link text-center text-light px-4" href="contact.html" target="_blank">CONTACT US</a></li>
-					<li class="nav-item text-center"><button class="btn btn-warning w-100"><a class="text-light" href="#">APPLY NOW</a></button></li>
+					<li class="nav-item"><a class="nav-link text-center text-light px-4" href="index.html"
+							target="_blank">E-LAB</a></li>
+					<li class="nav-item"><a class="nav-link text-center text-light px-4" href="contact.html"
+							target="_blank">CONTACT US</a></li>
+					<li class="nav-item text-center"><button class="btn btn-warning w-100"><a class="text-light"
+								href="#">APPLY NOW</a></button></li>
 				</ul>
 			</div>
 		</nav>
 		<!-- carousel slideshow -->
 		<div class="carousel slide lic-carousel h-100" id="caro">
 			<!-- carousel-indicators -->
-<!-- 		<ul class="carousel-indicators">
+			<!-- 		<ul class="carousel-indicators">
 				<li data-target="#caro" data-slide-to="0" class="active"></li>
 				<li data-target="#caro" data-slide-to="1"></li>
 			</ul> -->
@@ -41,7 +48,8 @@
 					<div class="carousel-caption h-100 d-flex flex-column justify-content-center p-3">
 						<h5 class="text-warning font-weight-bold">LAUTECH INNOVATION CHALLENGE</h5>
 						<h4 class="font-weight-bold mt-2 mb-3 d-md-none">APPLICATION CLOSES<br>SEPTEMBER 2018</h4>
-						<h2 class="font-weight-bold mt-2 mb-3 d-none d-md-block">APPLICATION CLOSES<br>SEPTEMBER 2018</h2>
+						<h2 class="font-weight-bold mt-2 mb-3 d-none d-md-block">APPLICATION CLOSES<br>SEPTEMBER 2018
+						</h2>
 						<div>
 							<button class="btn btn-warning"><a class="text-light" href="#">APPLY NOW</a></button>
 						</div>
@@ -71,9 +79,16 @@
 			<div class="col-lg-8 order-2 order-lg-1 font-muli">
 				<h4 class="text-warning font-weight-bold font-poppins">LAUTECH INNOVATION CHALLENGE</h4>
 				<p>Come October 27th, 2018, #TheRealLAUTECH will be on display for all the world to see!</p>
-				<p>The technological space, as well as other sectors of the Nigerian economy, are replete with very brilliant minds who are LAUTECH products. This is the real LAUTECH—an institution, that by default, bring entrepreneurs to the fore in its teeming mass of students and inculcates resilience, grit, and creativity in its student populace.</p>
+				<p>The technological space, as well as other sectors of the Nigerian economy, are replete with very
+					brilliant minds who are LAUTECH products. This is the real LAUTECH—an institution, that by default,
+					bring entrepreneurs to the fore in its teeming mass of students and inculcates resilience, grit, and
+					creativity in its student populace.</p>
 				<p class="text-warning font-poppins">#ThisIsLAUTECH!</p>
-				<p>On October 27, 2018, a select number of teams will pitch their groundbreaking ideas to seasoned judges from diverse industries as well as before the keen eyes of investors right on the LAUTECH campus.Do you think you have what it takes to change the world? Has an idea been burning in your mind so much so that you are persuaded it is the next big thing coming out of Africa? Then, take that bold, daring step. Intimidation we condone not! Apply without further delay. Soar!</p>
+				<p>On October 27, 2018, a select number of teams will pitch their groundbreaking ideas to seasoned
+					judges from diverse industries as well as before the keen eyes of investors right on the LAUTECH
+					campus.Do you think you have what it takes to change the world? Has an idea been burning in your
+					mind so much so that you are persuaded it is the next big thing coming out of Africa? Then, take
+					that bold, daring step. Intimidation we condone not! Apply without further delay. Soar!</p>
 			</div>
 			<div class="col-lg-4 d-none d-sm-block  order-1 order-lg-2 py-5 py-lg-0">
 				<div class="d-flex justify-content-center align-items-center">
@@ -82,21 +97,26 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<div class="container-fluid mt-5 px-0">
 		<div class="bg-lightgray mt-5 p-5">
 			<h1 class="text-center mt-5">Join The Innovation Train</h1>
 			<h3 class="text-warning text-center">~~~~~~~~~~~</h3>
-			<p class="text-center text-muted my-0 font-italic font-muli lead">Do you think you have what it takes to change the world?</p>
-			<p class="text-center text-muted my-0 font-italic font-muli lead">Has an idea been burning in your mind so much so that you are persuaded it is the next big thing coming out of Africa?</p>
-			<p class="text-center text-muted my-0 font-italic font-muli lead mb-3">Then, take that bold, daring step. Intimidation we condone not! Apply without further delay. Soar!</p>
+			<p class="text-center text-muted my-0 font-italic font-muli lead">Do you think you have what it takes to
+				change the world?</p>
+			<p class="text-center text-muted my-0 font-italic font-muli lead">Has an idea been burning in your mind so
+				much so that you are persuaded it is the next big thing coming out of Africa?</p>
+			<p class="text-center text-muted my-0 font-italic font-muli lead mb-3">Then, take that bold, daring step.
+				Intimidation we condone not! Apply without further delay. Soar!</p>
 		</div>
 	</div>
 	<div class="container-fluid">
 		<div class="row font-muli">
 			<div class="col-lg-4 bg-primary p-5">
 				<h3 class="text-light font-weight-bold mb-3">CRITERIA</h3>
-				<p class="text-light">Competitors must be present undergraduate or postgraduate students of Ladoke Akintola University of Technology and must have a viable solution that will solve problems in the following thematic areas:</p>
+				<p class="text-light">Competitors must be present undergraduate or postgraduate students of Ladoke
+					Akintola University of Technology and must have a viable solution that will solve problems in the
+					following thematic areas:</p>
 				<a class="text-light" href="criteria.html" target="_blank">Read more</a>
 			</div>
 			<div class="col-lg-4 bg-blue p-5">
@@ -111,27 +131,39 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<div class="container-fluid bg-sponsors px-0">
 		<div class="bg-sponsors-overlay p-5">
 			<h3 class="text-center font-weight-bold mt-5">Sponsors</h3>
 			<div class="row mx-auto justify-content-center py-5">
-				<div class="col col-md-8 col-lg-6 d-flex flex-column flex-md-row justify-content-center justify-content-md-between align-items-center my-3">
-					<img class="my-3 my-md-auto" src="Images/elab.jpg" alt="elab logo" style="width: 150px; height: 150px">
-					<img class="my-3 my-md-auto" src="Images/hyrid.jpg" alt="hyrid logo" style="width: 150px; height: 150px">
+				<div
+					class="col col-md-8 col-lg-6 d-flex flex-column flex-md-row justify-content-center justify-content-md-between align-items-center my-3">
+					<img class="my-3 my-md-auto" src="Images/elab.jpg" alt="elab logo"
+						style="width: 150px; height: 150px">
+					<img class="my-3 my-md-auto" src="Images/hyrid.jpg" alt="hyrid logo"
+						style="width: 150px; height: 150px">
 				</div>
-						
+
 			</div>
 		</div>
 	</div>
 
 
 
-	<p class="bg-dark text-light text-center m-0 p-3 font-muli">Designed by <span class="text-warning">Joshua Oyeleke</span> || 2348163087542</p>
+	<p class="bg-dark text-light text-center m-0 p-3 font-muli">Designed by <span class="text-warning">Joshua
+			Oyeleke</span> || 2348163087542</p>
 
 
 	<script src="lic-script.js"></script>
-	<script src="./bootstrapFiles/jquery.js"></script>
-	<script src="./bootstrapFiles/js/bootstrap.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+		crossorigin="anonymous"></script>
 </body>
+
 </html>
