--- a/criteria.html
+++ b/criteria.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>LIC - 2018</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Muli|Poppins&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="bootstrapFiles/css/bootstrap.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="project.css">
 </head>
+
 <body>
 	<div class="lic-banner">
 		<nav class="navbar navbar-expand-lg navbar-dark px-4 px-md-5 fixed-top" id="criteria-nav">
@@ -19,9 +22,12 @@
 				<ul class="navbar-nav lic-nav font-muli">
 					<li class="nav-item"><a class="nav-link text-center px-4 active" href="lic.html">HOME</a></li>
 					<li class="nav-item"><a class="nav-link text-light text-center px-4" href="lic.html">ABOUT</a></li>
-					<li class="nav-item"><a class="nav-link text-light text-center px-4" href="index.html">E-LAB</a></li>
-					<li class="nav-item"><a class="nav-link text-light text-center px-4" href="contact.html">CONTACT US</a></li>
-					<li class="nav-item text-center"><button class="btn btn-warning"><a class="text-light" href="#">APPLY NOW</a></button></li>
+					<li class="nav-item"><a class="nav-link text-light text-center px-4" href="index.html">E-LAB</a>
+					</li>
+					<li class="nav-item"><a class="nav-link text-light text-center px-4" href="contact.html">CONTACT
+							US</a></li>
+					<li class="nav-item text-center"><button class="btn btn-warning"><a class="text-light"
+								href="#">APPLY NOW</a></button></li>
 				</ul>
 			</div>
 		</nav>
@@ -36,11 +42,14 @@
 			<div id="accordion">
 				<div class="card font-muli">
 					<div class="card-header collapse-item card-plus bg-warning" id="click">
-						<h5 class="card-title collapsed mb-0 text-light cardToggle font-poppins" data-toggle="collapse" data-target="#collapse1">CRITERIA</h5>
+						<h5 class="card-title collapsed mb-0 text-light cardToggle font-poppins" data-toggle="collapse"
+							data-target="#collapse1">CRITERIA</h5>
 					</div>
 					<div class="collapse collapst" id="collapse1" data-parent="#accordion">
 						<div class="card-body text-muted">
-							<p>Competitors must be present undergraduate or postgraduate students of the Ladoke Akintola University of Technology and must have a viable solution that will solve problems in the following thematic areas:</p>
+							<p>Competitors must be present undergraduate or postgraduate students of the Ladoke Akintola
+								University of Technology and must have a viable solution that will solve problems in the
+								following thematic areas:</p>
 							<p>Financial Inclusion</p>
 							<p>Food Security</p>
 							<p>Energy (Access, Distribution etc.)</p>
@@ -50,19 +59,25 @@
 							<p>Quality Health Care</p>
 							<p>Human Security.</p>
 							<br>
-							<p>Must be a team of a maximum of four (4) students. A team can be a mix of undergraduate or postgraduate students but no more than (4) four members. Also, individuals can apply. Best innovative ideas will be invited for a grand finale on October 27 2018, to win a grand prize of N1,000,000.</p>
+							<p>Must be a team of a maximum of four (4) students. A team can be a mix of undergraduate or
+								postgraduate students but no more than (4) four members. Also, individuals can apply.
+								Best innovative ideas will be invited for a grand finale on October 27 2018, to win a
+								grand prize of N1,000,000.</p>
 						</div>
 					</div>
 				</div>
 				<div class="card">
 					<div class="card-header collapse-item card-plus bg-warning" id="click">
-						<h5 class="card-title collapsed mb-0 text-light font-poppins cardToggle" data-toggle="collapse" data-target="#collapse2">STAGES OF THE COMPETITION</h5>
+						<h5 class="card-title collapsed mb-0 text-light font-poppins cardToggle" data-toggle="collapse"
+							data-target="#collapse2">STAGES OF THE COMPETITION</h5>
 					</div>
 					<div class="collapse collapst" id="collapse2" data-parent="#accordion">
 						<div class="card-body text-muted">
 							<p>The competition is divided into four stages:</p>
-							<p>Stage 1:  General call for entries to be submitted as PowerPoint slides saved in PDF format. Deadline for this stage is September 28.</p>
-							<p>Stage 2: 50 teams are shortlisted and submit a one minute video of their pitch. Deadline for this is October 12 .</p>
+							<p>Stage 1: General call for entries to be submitted as PowerPoint slides saved in PDF
+								format. Deadline for this stage is September 28.</p>
+							<p>Stage 2: 50 teams are shortlisted and submit a one minute video of their pitch. Deadline
+								for this is October 12 .</p>
 							<p>Stage 3: 30 teams are shortlisted for the semifinals which is slated for October 27.</p>
 							<p>Stage 4: 10 finalist pitch on the grand stage which is scheduled for October 27.</p>
 						</div>
@@ -72,10 +87,19 @@
 		</div>
 	</div>
 
-	<p class="bg-dark text-light text-center m-0 p-3 font-muli">Designed by <span class="text-warning">Joshua Oyeleke</span> || 2348163087542</p>
+	<p class="bg-dark text-light text-center m-0 p-3 font-muli">Designed by <span class="text-warning">Joshua
+			Oyeleke</span> || 2348163087542</p>
 
 	<script src="lic-script.js"></script>
-	<script src="./bootstrapFiles/jquery.js"></script>
-	<script src="./bootstrapFiles/js/bootstrap.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+		crossorigin="anonymous"></script>
 </body>
+
 </html>
