Deleted an unused image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>ennovate lab - Enterprise meets ennovation</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="Title" description="Ennovate Lab">
+	<meta name="developer" content="Joshua Oyeleke">
 	<link rel="icon" type="image/icon type" href="Images/globe.png">
 	<link href="https://fonts.googleapis.com/css?family=Muli|Poppins&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
