--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
 	<title>Contact - ennovate lab</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="Title" description="Ennovate Lab">
+	<meta name="developer" content="Joshua Oyeleke">
 	<link rel="icon" type="image/icon type" href="Images/globe.png">
 	<link href="https://fonts.googleapis.com/css?family=Muli|Poppins&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -42,24 +44,24 @@
 	<div class="container my-5 py-md-5">
 		<div class="row">
 			<div class="col-md-6 font-muli">
-				<h1 class="font-poppins text-center text-md-left">Contact Details</h1>
+				<h1 class="font-poppins text-center text-warning text-md-left">Contact Details</h1>
 				<p class="text-muted lead my-2 my-md-4">Have a project you'd like to discuss with us? Feel free to
 					contact us via any of the following means.</p>
 				<div class="my-5">
-					<h5>Location</h5>
+					<h5 class="text-warning">Location</h5>
 					<p class="text-muted lead">50, Ogbomoso-Ilorin Rd, Ogbomoso, Oyo State.</p>
 				</div>
 				<div class="my-5">
-					<h5>Mail</h5>
+					<h5 class="text-warning">Mail</h5>
 					<p class="text-muted lead">hello@ennovatelab.com</p>
 				</div>
 				<div class="my-5">
-					<h5 class="">Phone</h5>
+					<h5 class="text-warning">Phone</h5>
 					<p class="text-muted lead">+234 805 176 2471</p>
 				</div>
 			</div>
 			<div class="col-md-6">
-				<h1 class="text-center text-md-left">Get in touch</h1>
+				<h1 class="text-center text-warning text-md-left">Get in touch</h1>
 				<form action="#" class="my-4 contact-form font-muli">
 					<div class="form-group">
 						<label class="text-muted font-big" for="name">Your Name (required)</label>
