--- a/contact.html
+++ b/contact.html
@@ -20,94 +20,97 @@
 		</button>
 
 		<div class="collapse navbar-collapse justify-content-end mb-2" id="nav">
-			<ul class="navbar-nav font-muli font-big">
-				<li class="nav-item"><a class="nav-link text-light text-center px-4 px-md-4" href="index.html"
+			<ul class="navbar-nav font-muli font-big justify-content-around">
+				<li class="nav-item"><a class="nav-link text-light text-center py-5 py-md-0 px-md-4" href="index.html"
 						target="_blank">Home</a></li>
-				<li class="nav-item"><a class="nav-link text-light text-center px-4 px-md-4" href="about.html"
+				<li class="nav-item"><a class="nav-link text-light text-center py-5 py-md-0 px-md-4" href="about.html"
 						target="_blank">About us</a></li>
-				<li class="nav-item"><a class="nav-link text-light text-center px-4 px-md-4 active" href="contact.html"
+				<li class="nav-item"><a class="nav-link text-light text-center py-5 py-md-0 px-md-4 active" href="contact.html"
 						target="_blank">Contact</a></li>
-				<li class="nav-item"><a class="nav-link text-light text-center px-4 px-md-4" href="lic.html"
+				<li class="nav-item"><a class="nav-link text-light text-center py-5 py-md-0 px-md-4" href="lic.html"
 						target="_blank">LIC</a></li>
 			</ul>
 		</div>
 	</nav>
 
-	<div class="container-fluid cntBanner px-0">
-		<div class="cnt-overlay w-100 h-100 d-flex align-items-center justify-content-center">
-			<h1 class="text-light font-weight-bold txt-shadow">Contact Us</h1>
-		</div>
-	</div>
+	<div class="wrap">
 
-	<div class="container my-5 py-md-5">
-		<div class="row">
-			<div class="col-md-6 font-muli">
-				<h1 class="font-poppins text-center text-md-left">Contact Details</h1>
-				<p class="text-muted lead my-2 my-md-4">Have a project you'd like to discuss with us? Feel free to
-					contact us via any of the following means.</p>
-				<div class="my-5">
-					<h5>Location</h5>
-					<p class="text-muted lead">50, Ogbomoso-Ilorin Rd, Ogbomoso, Oyo State.</p>
-				</div>
-				<div class="my-5">
-					<h5>Mail</h5>
-					<p class="text-muted lead">hello@ennovatelab.com</p>
-				</div>
-				<div class="my-5">
-					<h5 class="">Phone</h5>
-					<p class="text-muted lead">+234 805 176 2471</p>
-				</div>
-			</div>
-			<div class="col-md-6">
-				<h1 class="text-center text-md-left">Get in touch</h1>
-				<form action="#" class="my-4 contact-form font-muli">
-					<div class="form-group">
-						<label class="text-muted font-big" for="name">Your Name (required)</label>
-						<input type="text" class="form-control p-4" required>
-					</div>
-					<div class="form-group">
-						<label class="text-muted font-big" for="email">Your Email (required)</label>
-						<input type="email" class="form-control p-4" required>
-					</div>
-					<div class="form-group">
-						<label class="text-muted font-big" for="subject">Subject</label>
-						<input type="text" class="form-control p-4">
-					</div>
-					<div class="form-group">
-						<label class="text-muted font-big" for="message">Your Message</label>
-						<textarea name="message" id="message" cols="30" rows="7" class="form-control"></textarea>
-					</div>
-					<div class="d-flex justify-content-center">
-						<button class="btn btn-light btn-lg">Send</button>
-					</div>
-				</form>
+		<div class="container-fluid cntBanner px-0 tryAnimate hide">
+			<div class="cnt-overlay w-100 h-100 d-flex align-items-center justify-content-center">
+				<h1 class="text-light font-weight-bold txt-shadow">Contact Us</h1>
 			</div>
 		</div>
-	</div>
 
-	<hr>
-
-
-	<div class="container py-4 m-tp">
-		<div class="row font-muli">
-			<div class="col-md-6">
-				<h4 class="font-weight-bold">ennovate lab</h4>
-				<p class="text-muted">Where enterprise meets innovation</p>
-				<p class="text-lightgray">@2018 ennovate lab. All rights reserved.</p>
-			</div>
-			<div class="col-md-6">
-				<h4 class="font-weight-bold">Contact us</h4>
-				<p class="text-muted">Email: <span class="text-muted">hello@ennovatelab.com</span></p>
-				<p class="text-lightgray">Phone: <span class="text-muted">+2348051762471</span></p>
-				<p class="text-lightgray">Address: <span class="text-muted">50, Ogbomoso-Ilorin Rd, Ogbomosho, Oyo
-						State.</span></p>
+		<div class="container my-5 py-md-5">
+			<div class="row">
+				<div class="col-md-6 font-muli believe hide hidden">
+					<h1 class="font-poppins text-warning text-center text-md-left">Contact Details</h1>
+					<p class="text-muted lead my-2 my-md-4">Have a project you'd like to discuss with us? Feel free to
+						contact us via any of the following means.</p>
+					<div class="my-5">
+						<h5 class="text-warning">Location</h5>
+						<p class="text-muted lead">50, Ogbomoso-Ilorin Rd, Ogbomoso, Oyo State.</p>
+					</div>
+					<div class="my-5">
+						<h5 class="text-warning">Mail</h5>
+						<p class="text-muted lead">hello@ennovatelab.com</p>
+					</div>
+					<div class="my-5">
+						<h5 class="text-warning">Phone</h5>
+						<p class="text-muted lead">+234 805 176 2471</p>
+					</div>
+				</div>
+				<div class="col-md-6 believeImg hide hidden">
+					<h1 class="text-center text-md-left text-warning">Get in touch</h1>
+					<form action="#" class="my-4 contact-form font-muli">
+						<div class="form-group">
+							<label class="text-muted font-big" for="name">Your Name (required)</label>
+							<input type="text" class="form-control p-4" required>
+						</div>
+						<div class="form-group">
+							<label class="text-muted font-big" for="email">Your Email (required)</label>
+							<input type="email" class="form-control p-4" required>
+						</div>
+						<div class="form-group">
+							<label class="text-muted font-big" for="subject">Subject</label>
+							<input type="text" class="form-control p-4">
+						</div>
+						<div class="form-group">
+							<label class="text-muted font-big" for="message">Your Message</label>
+							<textarea name="message" id="message" cols="30" rows="7" class="form-control"></textarea>
+						</div>
+						<div class="d-flex justify-content-center">
+							<button class="btn btn-light btn-lg">Send</button>
+						</div>
+					</form>
+				</div>
 			</div>
 		</div>
+
+		<hr>
+
+
+		<div class="container py-4 m-tp">
+			<div class="row font-muli">
+				<div class="col-md-6 believe hidden">
+					<h4 class="font-weight-bold">ennovate lab</h4>
+					<p class="text-muted">Where enterprise meets innovation</p>
+					<p class="text-lightgray">@2018 ennovate lab. All rights reserved.</p>
+				</div>
+				<div class="col-md-6 believeImg hidden">
+					<h4 class="font-weight-bold">Contact us</h4>
+					<p class="text-muted">Email: <span class="text-muted">hello@ennovatelab.com</span></p>
+					<p class="text-lightgray">Phone: <span class="text-muted">+2348051762471</span></p>
+					<p class="text-lightgray">Address: <span class="text-muted">50, Ogbomoso-Ilorin Rd, Ogbomosho, Oyo
+							State.</span></p>
+				</div>
+			</div>
+		</div>
+
+
+		<p class="bg-dark text-light text-center mb-0 p-3 mt-5 font-muli footer hidden">Designed by <span class="text-warning">Joshua
+				Oyeleke</span> || 2348163087542</p>
 	</div>
-
-
-	<p class="bg-dark text-light text-center mb-0 p-3 mt-5 font-muli">Designed by <span class="text-warning">Joshua
-			Oyeleke</span> || 2348163087542</p>
 
 
 	<script src="lic-script.js"></script>
