Made some modifications to the website and also adjust the transition feature previously added to it

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
 	<title>Contact - ennovate lab</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="Title" description="Ennovate Lab">
+	<meta name="developer" content="Joshua Oyeleke">
 	<link rel="icon" type="image/icon type" href="Images/globe.png">
 	<link href="https://fonts.googleapis.com/css?family=Muli|Poppins&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -25,8 +27,8 @@
 						target="_blank">Home</a></li>
 				<li class="nav-item"><a class="nav-link text-light text-center py-5 py-md-0 px-md-4" href="about.html"
 						target="_blank">About us</a></li>
-				<li class="nav-item"><a class="nav-link text-light text-center py-5 py-md-0 px-md-4 active" href="contact.html"
-						target="_blank">Contact</a></li>
+				<li class="nav-item"><a class="nav-link text-light text-center py-5 py-md-0 px-md-4 active"
+						href="contact.html" target="_blank">Contact</a></li>
 				<li class="nav-item"><a class="nav-link text-light text-center py-5 py-md-0 px-md-4" href="lic.html"
 						target="_blank">LIC</a></li>
 			</ul>
@@ -34,16 +36,14 @@
 	</nav>
 
 	<div class="wrap">
-
-		<div class="container-fluid cntBanner px-0 tryAnimate hide">
+		<div class="container-fluid cntBanner px-0">
 			<div class="cnt-overlay w-100 h-100 d-flex align-items-center justify-content-center">
 				<h1 class="text-light font-weight-bold txt-shadow">Contact Us</h1>
 			</div>
 		</div>
-
 		<div class="container my-5 py-md-5">
 			<div class="row">
-				<div class="col-md-6 font-muli believe hide hidden">
+				<div class="col-md-6 font-muli">
 					<h1 class="font-poppins text-warning text-center text-md-left">Contact Details</h1>
 					<p class="text-muted lead my-2 my-md-4">Have a project you'd like to discuss with us? Feel free to
 						contact us via any of the following means.</p>
@@ -60,7 +60,7 @@
 						<p class="text-muted lead">+234 805 176 2471</p>
 					</div>
 				</div>
-				<div class="col-md-6 believeImg hide hidden">
+				<div class="col-md-6">
 					<h1 class="text-center text-md-left text-warning">Get in touch</h1>
 					<form action="#" class="my-4 contact-form font-muli">
 						<div class="form-group">
@@ -97,7 +97,7 @@
 					<p class="text-muted">Where enterprise meets innovation</p>
 					<p class="text-lightgray">@2018 ennovate lab. All rights reserved.</p>
 				</div>
-				<div class="col-md-6 believeImg hidden">
+				<div class="col-md-6 believeImg hidden mt-5 my-sm-0">
 					<h4 class="font-weight-bold">Contact us</h4>
 					<p class="text-muted">Email: <span class="text-muted">hello@ennovatelab.com</span></p>
 					<p class="text-lightgray">Phone: <span class="text-muted">+2348051762471</span></p>
@@ -108,7 +108,8 @@
 		</div>
 
 
-		<p class="bg-dark text-light text-center mb-0 p-3 mt-5 font-muli footer hidden">Designed by <span class="text-warning">Joshua
+		<p class="bg-dark text-light text-center mb-0 p-3 mt-5 font-muli">Designed by <span
+				class="text-warning">Joshua
 				Oyeleke</span> || 2348163087542</p>
 	</div>
 
