--- a/criteria.html
+++ b/criteria.html
@@ -38,7 +38,7 @@
                     </ul>
                 </div>
             </nav>
-            <div class="h-100 tryAnimate hide">
+            <div class="h-100">
                 <div class="banner-overlay w-100 px-3 h-100 d-flex justify-content-center align-items-center">
                     <h1 class="text-center text-light font-weight-bold">
                         CRITERIA | STAGES OF THE COMPETITION
@@ -108,7 +108,7 @@
                 </div>
             </div>
 
-            <p class="bg-dark text-light text-center m-0 p-3 font-muli footer hide w-100" style="bottom: 0; position: fixed;">Designed by <span class="text-warning">Joshua Oyeleke</span> || 2348163087542</p>
+            <p class="bg-dark text-light text-center m-0 p-3 font-muli w-100" style="bottom: 0; position: fixed;">Designed by <span class="text-warning">Joshua Oyeleke</span> || 2348163087542</p>
         </div>
 
         <script src="lic-script.js"></script>
