--- a/lic.html
+++ b/lic.html
@@ -35,7 +35,7 @@
 			</div>
 		</nav>
 		<!-- carousel slideshow -->
-		<div class="carousel slide lic-carousel h-100 tryAnimate hide" id="caro">
+		<div class="carousel slide lic-carousel h-100" id="caro">
 			<!-- carousel-indicators -->
 			<!-- 		<ul class="carousel-indicators">
 				<li data-target="#caro" data-slide-to="0" class="active"></li>
@@ -134,7 +134,7 @@
 		</div>
 
 		<div class="container-fluid bg-sponsors px-0">
-			<div class="bg-sponsors-overlay p-5 believeImg hidden">
+			<div class="bg-sponsors-overlay p-5">
 				<h3 class="text-center font-weight-bold mt-5">Sponsors</h3>
 				<div class="row mx-auto justify-content-center py-5">
 					<div
@@ -151,7 +151,7 @@
 
 
 
-		<p class="bg-dark text-light text-center m-0 p-3 font-muli footer hidden">Designed by <span class="text-warning">Joshua
+		<p class="bg-dark text-light text-center m-0 p-3 font-muli">Designed by <span class="text-warning">Joshua
 			Oyeleke</span> || 2348163087542</p>
 	</div>
 
